  - Fixed weaponsmith not buying weapons.
  - Adjusted light radius of some items.
  - Added books to learn special abilities (mining sand/stone; glassblowing; masonry)
  - Added granite and sand definitions
  - Added craftmenu for glassblowing
  - Support up to client 5.0.0.
  - Added Multis and Multi deeds.
  - Implemented some new npcs (thx to idget).
  - Implemented SE items for crafting.
 * Python Script Changes:
  - Improved/fixed goitem and gouid command in relation to containers (sending content).
  - Added an follow button to who menu.
  - Added a follow command.
  - Tinkers can now choose a second material.
  - Swingspeed is now limited to 1 swing per second.
  - Implemented several item property caps.
  - Archers now only need to stand still for 500 ms before they can fire.
  - Parried special abilities don't consume mana anymore.
  - Using a special ability 3 seconds after the last special ability consumes twice
    the mana.
  - Fixed an issue with the spell Telekinesis
  - Fix for Detecting Hidden
  - Fixed bug #0000380 (potionkeg was not usable with nightsight potion)
  - Fixed an issue with nuke <baseid> not working if the baseid had two characters.
  - Improved goname command (you can not only go the first char; e.g. use the command twice to go to
    the second char with the same name etc.)
  - Added a goitem <name> command (same function as goname, but for items)
  - Fixed a bug in the nukez command.
  - Fixed an issue with skillgain in the low levels.
  - Its no longer possible to equip movable>=2 items with doubleclicks.
  - Added the tilepattern command.
  - Fixed an issue with the magic property generator (splash damage and hit spell effects were happening far too often)
  - Tracking skill now does something. It's not yet OSI compatible. Thanks to Surcouf.
  - Implemented smove command to move yourself relatively to your current position without interrupting the current target.
  - Fixed an encoding issue in bulletin boards.