@@ -79,6 +79,9 @@ Wolfpack 12.9.14 Beta (SVN)
   - Added Multis and Multi deeds.
   - Implemented some new npcs (thx to idget).
   - Implemented SE items for crafting.
+  - Growable and harvestable hay, wheat, cotton, flax, hops.
+  - Grapevines got the farming script.
+  - Misc. id typos fixed.
  * Python Script Changes:
   - Improved/fixed goitem and gouid command in relation to containers (sending content).
   - Added an follow button to who menu.
@@ -168,6 +171,11 @@ Wolfpack 12.9.14 Beta (SVN)
   - Added cliloc support for crafting menues.
   - Fixed metals in carpentry menu and tinkering menu requiring blacksmithing skill.
   - Adapted scripts to new elven bodies.
+  - Animals can eat hay sheafs now.
+  - Implemented growable and harvestable hay, hops, wheat, cotton and flax.
+  - Grapevines and fruit trees can be harvested if they have resources.
+  - If enhancing an item fails and the item breaks, chars in range of 5 tiles and if in LoS will notice that.
+  - Cows will give milk, chicken eggs (on double click).
  * Misc. Changes:
  * Known Issues, Bugs, and Missing Features:
   - Some skills are still incomplete.
